# server

./: .commitlintrc.yml  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PHASE11_JAVA_REFERENCE_ANALYSIS.md  PHASE11_MISSING_PATTERNS.md  README.md  SECURITY.md  cliff.toml  deny.toml  oxidized.toml  release-please-config.json  rust-toolchain.toml  rustfmt.toml  test_overflow
crates/oxidized-game/: Cargo.toml
crates/oxidized-game/benches/: game_benchmarks.rs
crates/oxidized-game/src/: lib.rs
crates/oxidized-game/src/chat/: mod.rs  rate_limit.rs
crates/oxidized-game/src/chunk/: chunk_tracker.rs  mod.rs  view_distance.rs
crates/oxidized-game/src/commands/: argument_access.rs  argument_parser.rs  arguments.rs  cmd_advancement.rs  cmd_attribute.rs  cmd_ban.rs  cmd_ban_ip.rs  cmd_banlist.rs  cmd_bossbar.rs  cmd_clear.rs  cmd_clone.rs  cmd_damage.rs  cmd_data.rs  cmd_datapack.rs  cmd_debug.rs  cmd_defaultgamemode.rs  cmd_deop.rs  cmd_difficulty.rs  cmd_effect.rs  cmd_enchant.rs  cmd_execute.rs  cmd_experience.rs  cmd_fill.rs  cmd_fillbiome.rs  cmd_forceload.rs  cmd_function.rs  cmd_gamemode.rs  cmd_gamerule.rs  cmd_give.rs  cmd_help.rs  cmd_item.rs  cmd_jfr.rs  cmd_kick.rs  cmd_kill.rs  cmd_list.rs  cmd_locate.rs  cmd_loot.rs  cmd_me.rs  cmd_msg.rs  cmd_op.rs  (+52 more)
crates/oxidized-game/src/entity/: aabb.rs  bundles.rs  commands.rs  components.rs  data_slots.rs  id.rs  markers.rs  mod.rs  phases.rs  synched_data.rs  systems.rs  tracker.rs
crates/oxidized-game/src/event/: bus.rs  mod.rs  types.rs
crates/oxidized-game/src/inventory/: container.rs  item_ids.rs  item_stack.rs  mod.rs
crates/oxidized-game/src/level/: chunk_cache.rs  dimension.rs  dimension_manager.rs  error.rs  flags.rs  game_rules.rs  mod.rs  scheduled_tick.rs  server_level.rs  tick_rate.rs  traits.rs  weather.rs
crates/oxidized-game/src/lighting/: block_light.rs  cross_chunk.rs  engine.rs  mod.rs  occlusion.rs  parallel.rs  propagation.rs  queue.rs  sky.rs  world_lighting.rs
crates/oxidized-game/src/net/: chunk_serializer.rs  entity_movement.rs  light_serializer.rs  mod.rs
crates/oxidized-game/src/physics/: block_properties.rs  collision.rs  constants.rs  jump.rs  mod.rs  slow_blocks.rs  tick.rs  voxel_shape.rs
crates/oxidized-game/src/player/: abilities.rs  game_mode.rs  inventory.rs  login.rs  mod.rs  movement.rs  player_list.rs  server_player.rs
crates/oxidized-game/src/worldgen/: mod.rs  scheduler.rs  status_requirements.rs
crates/oxidized-game/tests/: game_integration.rs  light_compliance.rs  property_tests.rs
crates/oxidized-macros/: Cargo.toml
crates/oxidized-macros/src/: lib.rs
crates/oxidized-nbt/: Cargo.toml
crates/oxidized-nbt/benches/: nbt_benchmarks.rs
crates/oxidized-nbt/fuzz/: Cargo.toml
crates/oxidized-nbt/fuzz/fuzz_targets/: fuzz_nbt_read.rs
crates/oxidized-nbt/src/: accounter.rs  compound.rs  error.rs  io.rs  lib.rs  list.rs  mutf8.rs  reader.rs  serde.rs  snbt.rs  tag.rs  writer.rs
crates/oxidized-nbt/src/serde/: de.rs  mod.rs  ser.rs
crates/oxidized-nbt/src/snapshots/: oxidized_nbt__error__tests__depth_limit.snap  oxidized_nbt__error__tests__invalid_format.snap  oxidized_nbt__error__tests__invalid_tag_type.snap  oxidized_nbt__error__tests__invalid_utf8.snap  oxidized_nbt__error__tests__io_error.snap  oxidized_nbt__error__tests__list_type_mismatch.snap  oxidized_nbt__error__tests__serde_error.snap  oxidized_nbt__error__tests__size_limit.snap  oxidized_nbt__error__tests__snbt_parse.snap  oxidized_nbt__error__tests__unexpected_end.snap
crates/oxidized-nbt/tests/: nbt_roundtrip.rs
crates/oxidized-protocol/: Cargo.toml
crates/oxidized-protocol/benches/: codec_benchmarks.rs
crates/oxidized-protocol/fuzz/: Cargo.toml
crates/oxidized-protocol/fuzz/fuzz_targets/: fuzz_packet_decode.rs  fuzz_varint.rs
crates/oxidized-protocol/src/: auth.rs  compression.rs  connection.rs  constants.rs  crypto.rs  lib.rs  registry.rs  status.rs
crates/oxidized-protocol/src/chat/: click_event.rs  component.rs  component_json.rs  component_nbt.rs  formatting.rs  hover_event.rs  mod.rs  style.rs  text_color.rs
crates/oxidized-protocol/src/codec/: frame.rs  lp_vec3.rs  mod.rs  packet.rs  slot.rs  types.rs  varint.rs
crates/oxidized-protocol/src/data/: registries.json  tags.json
crates/oxidized-protocol/src/packets/: mod.rs
crates/oxidized-protocol/src/transport/: channel.rs  compression.rs  connection.rs  crypto.rs  handle.rs  mod.rs
crates/oxidized-protocol/src/types/: aabb.rs  block_pos.rs  chat_visibility.rs  chunk_pos.rs  difficulty.rs  direction.rs  game_type.rs  humanoid_arm.rs  mod.rs  particle_status.rs  resource_location.rs  section_pos.rs  type_macros.rs  vec2.rs  vec3.rs  vec3i.rs
crates/oxidized-protocol/tests/: compliance.rs  packet_codec.rs  property_tests.rs  roundtrip.rs  transport_compliance.rs
crates/oxidized-server/: Cargo.toml
crates/oxidized-server/src/: cli.rs  config.rs  console.rs  ecs.rs  lib.rs  logging.rs  main.rs  network.rs  ops.rs  tick.rs
crates/oxidized-server/src/app/: cli.rs  console.rs  logging.rs  mod.rs
crates/oxidized-server/src/config/: admin.rs  advanced.rs  display.rs  error.rs  gameplay.rs  mod.rs  network.rs  world.rs
crates/oxidized-server/src/network/: configuration.rs  handshake.rs  helpers.rs  login.rs  mod.rs  reader.rs  status.rs  writer.rs
crates/oxidized-server/src/snapshots/: oxidized__config__tests__default_config_snapshot.snap
crates/oxidized-server/tests/: network_compliance.rs
crates/oxidized-types/: Cargo.toml
crates/oxidized-types/src/: chunk_pos.rs
crates/oxidized-world/: Cargo.toml  build.rs
crates/oxidized-world/benches/: world_benchmarks.rs
crates/oxidized-world/fuzz/: Cargo.toml
crates/oxidized-world/fuzz/fuzz_targets/: fuzz_paletted_container.rs
crates/oxidized-world/src/: lib.rs
crates/oxidized-world/src/anvil/: chunk_loader.rs  chunk_serializer.rs  compression.rs  error.rs  mod.rs  region.rs
crates/oxidized-world/src/chunk/: bit_storage.rs  (+9 more)
crates/oxidized-world/tests/: chunk_lifecycle.rs  property_tests.rs  world_save.rs
(+301 files in other folders)
