[workspace]
members = [
    "crates/oxidized-server",
    "crates/oxidized-protocol",
    "crates/oxidized-nbt",
    "crates/oxidized-world",
    "crates/oxidized-game",
    "crates/oxidized-macros",
    "crates/oxidized-types",
]
resolver = "2"

[workspace.package]
version      = "0.1.0" # x-release-please-version
edition      = "2024"
authors      = ["Dogukan Metan <dogukanmetan@gmail.com>"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/dodoflix/Oxidized"
homepage     = "https://github.com/dodoflix/Oxidized"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio          = { version = "1", features = ["full"] }
tokio-util     = { version = "0.7", features = ["codec"] }

# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = { version = "1", features = ["preserve_order"] }
toml           = "1"
bytes          = "1"

# Crypto
aes            = "0.8"
md-5           = "0.11"
rsa            = { version = "0.9", features = ["sha2", "getrandom"] }
rand           = "0.10"
sha1           = "0.10"
sha2           = "0.10"

# Compression
flate2         = "1"
lz4_flex       = "0.13"

# Logging/tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }

# Networking
reqwest        = { version = "0.13", features = ["json"] }
urlencoding    = "2"
uuid           = { version = "1", features = ["v3", "v4", "serde"] }

# Error handling
thiserror      = "2"
anyhow         = "1"

# Parallelism
rayon          = "1"

# Data structures
indexmap       = { version = "2", features = ["serde"] }
ahash          = "0.8"
bitflags       = "2"
parking_lot    = "0.12"
dashmap        = "6"
lru            = "0.16"

# ECS
bevy_ecs       = "0.18"

# Memory management
mimalloc       = { version = "0.1", default-features = false }

# Proc-macro support
syn            = { version = "2", features = ["full", "extra-traits"] }
quote          = "1"
proc-macro2    = "1"

# Math / noise
glam           = "0.32"

# CLI
clap           = { version = "4", features = ["derive"] }
rustyline      = "17"

# Testing
proptest       = "1"
insta          = { version = "1", features = ["toml"] }
tempfile       = "3"
serial_test    = "3"
criterion      = { version = "0.5", features = ["html_reports"] }

# Internal workspace crates
oxidized-protocol = { path = "crates/oxidized-protocol" }
oxidized-nbt      = { path = "crates/oxidized-nbt" }
oxidized-world    = { path = "crates/oxidized-world" }
oxidized-game     = { path = "crates/oxidized-game" }
oxidized-macros   = { path = "crates/oxidized-macros" }
oxidized-types    = { path = "crates/oxidized-types" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "debuginfo"

[profile.dev]
opt-level = 1       # faster builds while keeping some speed for game loop

[profile.bench]
inherits  = "release"
debug     = true

[workspace.lints.rust]
# TODO(R3.7): Escalate to "deny" once existing gaps are filled
missing_docs       = "warn"
unsafe_code        = "deny"
unused_imports     = "warn"

[workspace.lints.clippy]
# Correctness — hard errors
correctness        = { level = "deny", priority = -1 }
# Performance and style — warnings
perf               = { level = "warn", priority = -1 }
style              = { level = "warn", priority = -1 }
complexity         = { level = "warn", priority = -1 }
suspicious         = { level = "warn", priority = -1 }
# Specific useful lints
unwrap_used        = "deny"
expect_used        = "deny"
panic              = "deny"
print_stdout       = "deny"
print_stderr       = "deny"
needless_pass_by_value = "warn"
redundant_clone    = "warn"
# Noisy lints intentionally suppressed
module_name_repetitions = "allow"
must_use_candidate      = "allow"
cast_possible_truncation = "allow"
cast_sign_loss           = "allow"
cast_possible_wrap       = "allow"
