[workspace]
members = [
    "crates/oxidized-server",
    "crates/oxidized-protocol",
    "crates/oxidized-world",
    "crates/oxidized-game",
    "crates/oxidized-macros",
]
resolver = "2"

[workspace.package]
version      = "0.1.0" # x-release-please-version
edition      = "2024"
authors      = ["Dogukan Metan <dogukanmetan@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/oxidized-mc/server"
homepage     = "https://github.com/oxidized-mc/server"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio          = { version = "1", features = ["full"] }
tokio-util     = { version = "0.7", features = ["codec"] }

# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = { version = "1", features = ["preserve_order"] }
toml           = "1"
bytes          = "1"

# Crypto
aes            = "0.8"
md-5           = "0.11"
rsa            = { version = "0.9", features = ["sha2", "getrandom"] }
rand           = "0.10"
sha1           = "0.10"
sha2           = "0.11"

# Compression
flate2         = "1"
lz4_flex       = "0.13"

# Logging/tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }

# Networking
reqwest        = { version = "0.13", features = ["json"] }
urlencoding    = "2"
uuid           = { version = "1", features = ["v3", "v4", "serde"] }

# Error handling
thiserror      = "2"
anyhow         = "1"

# Parallelism
rayon          = "1"

# Data structures
indexmap       = { version = "2", features = ["serde"] }
ahash          = "0.8"
bitflags       = "2"
parking_lot    = "0.12"
dashmap        = "6"
lru            = "0.16"

# ECS
bevy_ecs       = "0.18"

# Memory management
mimalloc       = { version = "0.1", default-features = false }

# Proc-macro support
syn            = { version = "2", features = ["full", "extra-traits"] }
quote          = "1"
proc-macro2    = "1"

# Math / noise
glam           = "0.32"

# CLI
clap           = { version = "4", features = ["derive"] }
rustyline      = "18"

# Testing
proptest       = "1"
insta          = { version = "1", features = ["toml"] }
tempfile       = "3"
serial_test    = "3"
criterion      = { version = "0.5", features = ["html_reports"] }

# Internal workspace crates
oxidized-protocol = { path = "crates/oxidized-protocol" }
oxidized-nbt         = { git = "https://github.com/oxidized-mc/nbt.git" }
oxidized-world    = { path = "crates/oxidized-world" }
oxidized-game     = { path = "crates/oxidized-game" }
oxidized-macros   = { path = "crates/oxidized-macros" }
oxidized-types       = { git = "https://github.com/oxidized-mc/types.git" }
oxidized-compression = { git = "https://github.com/oxidized-mc/compression.git" }
oxidized-crypto      = { git = "https://github.com/oxidized-mc/crypto.git" }
oxidized-auth        = { git = "https://github.com/oxidized-mc/auth.git" }
oxidized-codec       = { git = "https://github.com/oxidized-mc/codec.git" }
oxidized-mc-types    = { git = "https://github.com/oxidized-mc/mc-types.git" }
oxidized-chat        = { git = "https://github.com/oxidized-mc/chat.git" }
oxidized-transport   = { git = "https://github.com/oxidized-mc/transport.git" }
oxidized-registry    = { git = "https://github.com/oxidized-mc/registry.git" }
oxidized-chunks      = { git = "https://github.com/oxidized-mc/chunks.git" }
oxidized-anvil       = { git = "https://github.com/oxidized-mc/anvil.git" }
oxidized-commands    = { git = "https://github.com/oxidized-mc/commands.git" }
oxidized-inventory   = { git = "https://github.com/oxidized-mc/inventory.git" }
oxidized-lighting    = { git = "https://github.com/oxidized-mc/lighting.git" }
oxidized-physics     = { git = "https://github.com/oxidized-mc/physics.git" }
oxidized-worldgen    = { git = "https://github.com/oxidized-mc/worldgen.git" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "debuginfo"

[profile.dev]
opt-level = 1       # faster builds while keeping some speed for game loop

[profile.bench]
inherits  = "release"
debug     = true

[workspace.lints.rust]
# TODO(R3.7): Escalate to "deny" once existing gaps are filled
missing_docs       = "warn"
unsafe_code        = "deny"
unused_imports     = "warn"

[workspace.lints.clippy]
# Correctness — hard errors
correctness        = { level = "deny", priority = -1 }
# Performance and style — warnings
perf               = { level = "warn", priority = -1 }
style              = { level = "warn", priority = -1 }
complexity         = { level = "warn", priority = -1 }
suspicious         = { level = "warn", priority = -1 }
# Specific useful lints
unwrap_used        = "deny"
expect_used        = "deny"
panic              = "deny"
print_stdout       = "deny"
print_stderr       = "deny"
needless_pass_by_value = "warn"
redundant_clone    = "warn"
# Noisy lints intentionally suppressed
module_name_repetitions = "allow"
must_use_candidate      = "allow"
cast_possible_truncation = "allow"
cast_sign_loss           = "allow"
cast_possible_wrap       = "allow"

[patch."https://github.com/oxidized-mc/nbt.git"]
oxidized-nbt = { path = "../nbt" }

[patch."https://github.com/oxidized-mc/types.git"]
oxidized-types = { path = "../types" }

[patch."https://github.com/oxidized-mc/compression.git"]
oxidized-compression = { path = "../compression" }

[patch."https://github.com/oxidized-mc/crypto.git"]
oxidized-crypto = { path = "../crypto" }

[patch."https://github.com/oxidized-mc/auth.git"]
oxidized-auth = { path = "../auth" }

[patch."https://github.com/oxidized-mc/codec.git"]
oxidized-codec = { path = "../codec" }

[patch."https://github.com/oxidized-mc/mc-types.git"]
oxidized-mc-types = { path = "../mc-types" }

[patch."https://github.com/oxidized-mc/chat.git"]
oxidized-chat = { path = "../chat" }

[patch."https://github.com/oxidized-mc/transport.git"]
oxidized-transport = { path = "../transport" }

[patch."https://github.com/oxidized-mc/registry.git"]
oxidized-registry = { path = "../registry" }

[patch."https://github.com/oxidized-mc/chunks.git"]
oxidized-chunks = { path = "../chunks" }

[patch."https://github.com/oxidized-mc/anvil.git"]
oxidized-anvil = { path = "../anvil" }

[patch."https://github.com/oxidized-mc/commands.git"]
oxidized-commands = { path = "../commands" }

[patch."https://github.com/oxidized-mc/inventory.git"]
oxidized-inventory = { path = "../inventory" }

[patch."https://github.com/oxidized-mc/lighting.git"]
oxidized-lighting = { path = "../lighting" }

[patch."https://github.com/oxidized-mc/physics.git"]
oxidized-physics = { path = "../physics" }

[patch."https://github.com/oxidized-mc/worldgen.git"]
oxidized-worldgen = { path = "../worldgen" }
