[package]
name        = "oxidized-game"
description = "Game logic: entities, AI, combat, crafting, commands, advancements"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
keywords    = ["minecraft", "game-logic", "ecs", "entities", "combat"]
categories  = ["game-development", "games"]

[dependencies]
oxidized-nbt      = { workspace = true }
oxidized-chunks   = { workspace = true }
oxidized-anvil    = { workspace = true }
oxidized-protocol = { workspace = true }
oxidized-registry = { workspace = true }
oxidized-commands = { workspace = true }
oxidized-inventory = { workspace = true }
oxidized-auth     = { workspace = true }
oxidized-mc-types = { workspace = true }
oxidized-codec    = { workspace = true }
oxidized-chat     = { workspace = true }
oxidized-types    = { workspace = true }

bevy_ecs     = { workspace = true }
bytes        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
parking_lot  = { workspace = true }
ahash        = { workspace = true }
bitflags     = { workspace = true }
glam         = { workspace = true }
indexmap      = { workspace = true }
lru           = { workspace = true }
rand          = { workspace = true }
rayon         = { workspace = true }
dashmap       = { workspace = true }
tokio-util    = { workspace = true }
sha2          = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
proptest = { workspace = true }
insta    = { workspace = true }
criterion = { workspace = true }
oxidized-lighting = { workspace = true }
oxidized-physics  = { workspace = true }
oxidized-worldgen = { workspace = true }

[[bench]]
name    = "game_benchmarks"
harness = false

[lints]
workspace = true
