[package]
name        = "oxidized-macros"
description = "Proc-macro derives for Oxidized Minecraft server (McPacket, McRead, McWrite)"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace        = true
quote.workspace      = true
proc-macro2.workspace = true

[lints]
workspace = true
