[package]
name        = "oxidized-nbt"
description = "NBT (Named Binary Tag) read/write implementation — all 13 tag types, SNBT, GZIP/zlib"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
keywords    = ["nbt", "minecraft", "binary-format", "serialization"]
categories  = ["encoding", "parser-implementations", "game-development"]

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
flate2       = { workspace = true }
bytes        = { workspace = true }
indexmap      = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest   = { workspace = true }
insta      = { workspace = true }

[lints]
workspace = true
