[package]
name        = "oxidized-protocol"
description = "Minecraft 26.1 protocol implementation (packets, codec, connection state)"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
oxidized-nbt = { workspace = true }
oxidized-macros = { workspace = true }

tokio        = { workspace = true }
tokio-util   = { workspace = true }
bytes        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
aes          = { workspace = true }
md-5         = { workspace = true }
rsa          = { workspace = true }
rand         = { workspace = true }
sha1         = { workspace = true }
flate2       = { workspace = true }
reqwest      = { workspace = true }
urlencoding  = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
