[package]
name        = "oxidized-protocol"
description = "Minecraft 26.1 protocol implementation (packets, codec, connection state)"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
keywords    = ["minecraft", "protocol", "packets", "game-server"]
categories  = ["game-development", "network-programming"]

[dependencies]
oxidized-nbt = { workspace = true }
oxidized-macros = { workspace = true }
oxidized-types = { workspace = true }

tokio        = { workspace = true }
tokio-util   = { workspace = true }
bytes        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
indexmap      = { workspace = true }
uuid         = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
aes          = { workspace = true }
md-5         = { workspace = true }
rsa          = { workspace = true }
rand         = { workspace = true }
sha1         = { workspace = true }
flate2       = { workspace = true }
reqwest      = { workspace = true }
urlencoding  = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
insta = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "codec_benchmarks"
harness = false

[lints]
workspace = true
