[package]
name        = "oxidized-server"
description = "Oxidized — high-performance Minecraft server (binary)"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[[bin]]
name = "oxidized"
path = "src/main.rs"

[dependencies]
oxidized-protocol = { workspace = true }
oxidized-nbt      = { workspace = true }
oxidized-world    = { workspace = true }
oxidized-game     = { workspace = true }

tokio             = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde             = { workspace = true }
toml              = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
uuid              = { workspace = true }
mimalloc          = { workspace = true }

[lints]
workspace = true
