[package]
name        = "oxidized-server"
description = "Oxidized — high-performance Minecraft server (binary)"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
publish     = false

[[bin]]
name = "oxidized"
path = "src/main.rs"

[dependencies]
oxidized-protocol = { workspace = true }
oxidized-nbt      = { workspace = true }
oxidized-world    = { workspace = true }
oxidized-game     = { workspace = true }

tokio             = { workspace = true }
bytes             = { workspace = true }
parking_lot       = { workspace = true }
dashmap           = { workspace = true }
rand              = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
toml              = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
uuid              = { workspace = true }
mimalloc          = { workspace = true }
clap              = { workspace = true }
rustyline         = { workspace = true }
reqwest           = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
insta     = { workspace = true }
tempfile  = { workspace = true }

[lints]
workspace = true
