[package]
name        = "oxidized-types"
description = "Shared coordinate types used across the Oxidized workspace"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
