[package]
name        = "oxidized-world"
description = "World, chunks, blocks, items, entities and Anvil region file I/O"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
oxidized-nbt = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
bytes        = { workspace = true }
flate2       = { workspace = true }
ahash        = { workspace = true }
parking_lot  = { workspace = true }
bitflags     = { workspace = true }
glam         = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
