[package]
name        = "oxidized-world"
description = "World, chunks, blocks, items, entities and Anvil region file I/O"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
keywords    = ["minecraft", "world", "chunks", "anvil", "blocks"]
categories  = ["game-development", "data-structures"]

[dependencies]
oxidized-nbt = { workspace = true }
oxidized-types = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
bytes        = { workspace = true }
flate2       = { workspace = true }
lz4_flex     = { workspace = true }
ahash        = { workspace = true }
parking_lot  = { workspace = true }
bitflags     = { workspace = true }
glam         = { workspace = true }
dashmap      = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
flate2     = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
insta    = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "world_benchmarks"
harness = false

[lints]
workspace = true
