[package]
name        = "oxidized-world"
description = "World, chunks, blocks, items, entities and Anvil region file I/O"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
keywords    = ["minecraft", "world", "chunks", "anvil", "blocks"]
categories  = ["game-development", "data-structures"]

[dependencies]

[dev-dependencies]
tokio    = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
insta    = { workspace = true }
criterion = { workspace = true }
oxidized-nbt      = { workspace = true }
oxidized-types    = { workspace = true }
oxidized-registry = { workspace = true }
oxidized-chunks   = { workspace = true }
oxidized-anvil    = { workspace = true }

[[bench]]
name    = "world_benchmarks"
harness = false

[lints]
workspace = true
