[package]
name    = "oxidized-nbt-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
oxidized-nbt  = { path = ".." }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_nbt_read"
path = "fuzz_targets/fuzz_nbt_read.rs"
doc  = false
