[package]
name    = "oxidized-protocol-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys    = "0.4"
oxidized-protocol = { path = ".." }
bytes             = "1"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_varint"
path = "fuzz_targets/fuzz_varint.rs"
doc  = false

[[bin]]
name = "fuzz_packet_decode"
path = "fuzz_targets/fuzz_packet_decode.rs"
doc  = false
